# Iris

./: .gitignore  LICENSE.md  README.md
Bulk/Resources/: settings.ini
Bulk/Resources/Assets/Shaders/: DefaultInfiniteGridFloor.frag  DefaultInfiniteGridFloor.vert  DefaultRawBitVolumePoints.frag  DefaultRawBitVolumePoints.vert  DefaultRawBitVolumePointsGeomTriangles.frag  DefaultRawBitVolumePointsGeomTriangles.geom  DefaultRawBitVolumePointsGeomTriangles.vert  PBRSample.frag
Bulk/Resources/media/css/: graph.qss  style.qss
Bulk/Resources/media/img/graph/node/dropshadow/: dropshadow.psd
Bulk/Resources/media/img/graph/vignette/: Vignette.psd
Bulk/Source/: CMakeLists.txt
Bulk/Source/Iris/: CMakeLists.txt
Bulk/Source/Iris/Source/: Iris.Config.h  Iris.main.cpp
Bulk/Source/Iris/Source/Utils/: Iris.Utils.CustomProperties.h  Iris.Utils.Settings.cpp  Iris.Utils.Settings.h  Iris.Utils.SettingsKeys.h
Bulk/Source/Iris/Source/Window/: Iris.Window.Content.cpp  Iris.Window.Content.h  Iris.Window.Graph.cpp  Iris.Window.Graph.h  Iris.Window.GraphScene.cpp  Iris.Window.GraphScene.h  Iris.Window.GraphView.cpp  Iris.Window.GraphView.h  Iris.Window.MainCaption.cpp  Iris.Window.MainCaption.h  Iris.Window.MainContent.cpp  Iris.Window.MainContent.h  Iris.Window.MainWindow.cpp  Iris.Window.MainWindow.h  Iris.Window.Viewport3D.cpp  Iris.Window.Viewport3D.h
Bulk/Tools/: DefaultConfig.cmake
Bulk/Tools/Scripts/Hooks/: post-merge
Bulk/Tools/Scripts/Linux/: Generate_SublimeText_Project_GNU_GCC.sh
Bulk/Tools/Scripts/Mac/: Generate_Xcode.sh
Bulk/Tools/Scripts/Windows/: Generate_MinGW_Makefile_GCC.bat  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat
